2007-09-02  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-gui.c:
	* src/network-light-gui.h:

	Use int for load_level and use CLAMP macro to keep it under limits.

2007-09-02  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/gupnp-network-light.glade:
	* src/network-light-gui.c:

	Add popup menu.

2007-09-01  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/gupnp-network-light.glade:

	Add about dialog.

2007-09-01  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/Makefile.am:
	* src/gupnp-network-light.glade:
	* src/network-light-gui.c:
	* src/network-light-gui.h:
	* src/network-light.c:

	Use glade for consistancy.

2007-08-31  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/network-light-on.png:

	Use image from Markus Berg <markus.berg@tkk.fi> for "on".

2007-08-31  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/Makefile.am:
	* src/network-light-gui.c:
	* src/network-light-gui.h:
	* src/network-light.c:

	Add basic GUI for network light and let it handle the light status
	and load_level.

2007-08-29  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light.c:

	Implement Dimming service.

2007-08-28  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light.c:

	Refactorize the main function.

2007-08-28  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/Makefile.am:

	Add network light icons to the build.

2007-08-28  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/network-light-off.png:
	* src/pixmaps/network-light-on.png:
	* src/pixmaps/network-light.png:
	* src/xml/network-light-desc.xml:

	Setup the icons for the network light service. Courtesy of Tango
	project.

2007-08-27  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/xml/SwitchPower-scpd.xml:

	Correct a typo in SwitchPower SCPD.

2007-08-27  Zeeshan Ali  <zeenix@gstreamer.net>

	* configure.ac:
	* NEWS:

	Bump up the version to 0.1.2 and update the NEWS file.

	* src/universal-cp-gui.c:

	Fix the treeview headers that broke because of recent changes.

2007-08-27  Zeeshan Ali  <zeenix@gstreamer.net>