@@ -19,6 +19,7 @@
   <property name="focus_on_map">True</property>
   <signal name="delete_event" handler="on_delete_event"/>
   <signal name="button_release_event" handler="on_main_window_button_event" last_modification_time="Sat, 01 Sep 2007 20:25:29 GMT"/>
+  <signal name="button_press_event" handler="on_main_window_button_event" last_modification_time="Sat, 01 Sep 2007 21:34:11 GMT"/>
 
   <child>
     <widget class="GtkImage" id="light-bulb-image">
